# b2py

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: release.yml
b2py/: __init__.py  auth.py  client.py  constants.py  enums.py  exceptions.py  models.py
